--- a/gestao/templates/admin_custom/auditoria.html
+++ b/gestao/templates/admin_custom/auditoria.html
@@ -2,7 +2,7 @@
 {% block title %}Auditoria{% endblock %}
 {% block header_title %}Auditoria{% endblock %}
 {% block header_subtitle %}<p class="page-subtitle">Registros claros das ações realizadas no painel administrativo.</p>{% endblock %}
-{% block menu_auditoria %}bg-zinc-700 text-white{% endblock %}
+{% block menu_auditoria %}is-active{% endblock %}
 
 {% block content %}
 <section class="surface-card">
