--- a/gestao/templates/admin_custom/contas_adm_form.html
+++ b/gestao/templates/admin_custom/contas_adm_form.html
@@ -1,7 +1,7 @@
 {% extends "admin_custom/base_admin.html" %}
 {% block title %}{% if form.instance.pk %}Editar Conta Administrada{% else %}Nova Conta Administrada{% endif %}{% endblock %}
 {% block header_title %}{% if form.instance.pk %}Editar Conta Administrada{% else %}Nova Conta Administrada{% endif %}{% endblock %}
-{% block menu_contas_adm %}bg-zinc-700 text-white{% endblock %}
+{% block menu_contas_adm %}is-active{% endblock %}
 {% block content %}
 <div class="form-wrapper">
     <form method="post" class="form-shell">
@@ -53,8 +53,8 @@
         </div>
 
         <div class="form-actions">
-            <a href="{% url 'admin_contas_administradas' %}" class="btn btn-secondary">Cancelar</a>
-            <button class="btn-primary" type="submit">Salvar</button>
+            <a href="{% url 'admin_contas_administradas' %}" class="btn btn--outline">Cancelar</a>
+            <button class="btn" type="submit">Salvar</button>
         </div>
     </form>
 </div>
