--- a/gestao/templates/admin_custom/form_aeroporto.html
+++ b/gestao/templates/admin_custom/form_aeroporto.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block title %}{% if form.instance.pk %}Editar Aeroporto{% else %}Novo Aeroporto{% endif %}{% endblock %}
 {% block header_title %}{% if form.instance.pk %}Editar Aeroporto{% else %}Novo Aeroporto{% endif %}{% endblock %}
-{% block menu_aeroportos %}bg-zinc-700 text-white{% endblock %}
+{% block menu_aeroportos %}is-active{% endblock %}
 {% block dados_complementares_open %}open{% endblock %}
 {% block extra_head %}
 <link rel="stylesheet" href="{% static 'gestao/formulario_base_gestao.css' %}">
@@ -20,7 +20,7 @@
     </div>
     {% endfor %}
     <div class="form-actions">
-        <button type="submit" class="btn-primary">Salvar</button>
+        <button type="submit" class="btn">Salvar</button>
     </div>
 </form>
 </div>
