--- a/gestao/templates/admin_custom/form_companhia_aerea.html
+++ b/gestao/templates/admin_custom/form_companhia_aerea.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block title %}{% if form.instance.pk %}Editar Companhia{% else %}Nova Companhia{% endif %}{% endblock %}
 {% block header_title %}Companhias Aéreas{% endblock %}
-{% block menu_companhias %}bg-zinc-700 text-white{% endblock %}
+{% block menu_companhias %}is-active{% endblock %}
 {% block dados_complementares_open %}open{% endblock %}
 {% block extra_head %}
 <link rel="stylesheet" href="{% static 'gestao/formulario_base_gestao.css' %}">
@@ -21,7 +21,7 @@
         {{ form.site_url }}
     </div>
     <div class="form-actions">
-        <button type="submit" class="btn-primary">Salvar</button>
+        <button type="submit" class="btn">Salvar</button>
     </div>
 </form>
 </div>
