--- a/gestao/templates/admin_custom/form_hotel.html
+++ b/gestao/templates/admin_custom/form_hotel.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block title %}{% if form.instance.pk %}Editar Emissão de Hotel{% else %}Nova Emissão de Hotel{% endif %}{% endblock %}
 {% block header_title %}{% if form.instance.pk %}Editar Emissão de Hotel{% else %}Nova Emissão de Hotel{% endif %}{% endblock %}
-{% block menu_hoteis %}bg-zinc-700 text-white{% endblock %}
+{% block menu_hoteis %}is-active{% endblock %}
 {% block extra_head %}
 <link rel="stylesheet" href="{% static 'gestao/formulario_base_gestao.css' %}">
 {% endblock %}
@@ -19,7 +19,7 @@
     </div>
     {% endfor %}
     <div class="form-actions">
-        <button type="submit" class="btn-primary">Salvar</button>
+        <button type="submit" class="btn">Salvar</button>
     </div>
 </form>
 </div>
