--- a/gestao/templates/admin_custom/nova_movimentacao.html
+++ b/gestao/templates/admin_custom/nova_movimentacao.html
@@ -15,8 +15,8 @@
         </div>
         {% endfor %}
         <div class="form-actions">
-            <button type="submit" class="btn-primary">Salvar</button>
-            <a href="{% url 'admin_movimentacoes' conta.id %}" class="ml-3 bg-zinc-600 hover:bg-zinc-700 text-white px-4 py-2 rounded">Cancelar</a>
+            <button type="submit" class="btn">Salvar</button>
+            <a href="{% url 'admin_movimentacoes' conta.id %}" class="ml-3 bg-zinc-600 hover:is-active px-4 py-2 rounded">Cancelar</a>
         </div>
     </form>
 </div>
